--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.18.0",
-    "sharp": "^0.30.4"
+    "sharp": "^0.30.4",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "install": "^0.13.0",
